manifest/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true" 
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://topbeds.vercel.app"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
  - hosts:
    - topbeds.smasher.shop
    secretName: my-tls-secret
  rules:
  - host: topbeds.smasher.shop
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: topbeds-auth-service
            port:
              number: 3000
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: topbeds-user-service
            port:
              number: 3001
      - path: /api/property
        pathType: Prefix
        backend:
          service:
            name: topbeds-property-service
            port:
              number: 3002
      - path: /api/booking
        pathType: Prefix
        backend:
          service:
            name: topbeds-booking-service
            port:
              number: 3003
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: topbeds-chat-service
            port:
              number: 3004
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: topbeds-chat-service
            port:
              number: 3004
